[build-system]
requires = ["setuptools >= 77.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "problemtools"
authors = [
    {name = "Fredrik Niemela", email = "niemela@kattis.com"},
    {name = "Gunnar Kreitz", email = "gkreitz@kattis.com"},
    {name = "Mikael Goldman", email = "migo@kattis.com"},
    {name = "Pehr Söderman", email = "pehrs@kattis.com"},
    {name = "Per Austrin", email = "austrin@kattis.com"},
]
description = "Kattis Problem Tools"
readme = "README.md"
license = "MIT"
keywords = ["kattis", "problemtools", "icpc", "clics"]

dependencies = [
    "colorlog",
    "nh3",
    "PyYAML",
    "plasTeX>=3.0",
    "pydantic>=2.11",
]
dynamic = [ "version" ]

[project.scripts]
verifyproblem = "problemtools.verifyproblem:main"
problem2html = "problemtools.problem2html:main"
problem2pdf = "problemtools.problem2pdf:main"

[project.urls]
Repository = "https://github.com/Kattis/problemtools"
Homepage = "https://www.kattis.com"
Documentation = "https://www.kattis.com/problem-package-format/"
Issues = "https://github.com/Kattis/problemtools/issues/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["problemtools", "problemtools.*"]

[tool.setuptools_scm]
version_file = "problemtools/_version.py"

[tool.ruff]
line-length = 130
exclude = [ "examples" ]

[tool.ruff.format]
quote-style = "single"
